--- a/templates/chat/rollResult.html
+++ b/templates/chat/rollResult.html
@@ -13,7 +13,7 @@
         <div class="finalText">
             <div class="tooltip">
                 <p>{{localize "CLEENMAIN.chatmessage.rollresult"}} {{result.total}}</p>
-                <span class="tooltiptext">{{result.tooltip}}</span>
+                <span class="tooltiptext">{{{result.tooltip.string}}}</span>
             </div>
         </div>
 </div>
