--- a/templates/item/weapon.html
+++ b/templates/item/weapon.html
@@ -42,7 +42,7 @@
                     {{/select}}
                 </select>
             </td>
-            <td><input name="data.damage" type="text" value="{{data.damage}}"/></td>
+            <td><input name="data.damageBase" type="text" value="{{data.damageBase}}"/></td>
             <td><input name="data.range" type="text" value="{{data.range}}" data-dtype="Number"/></td>
             <td><input name="data.targets" type="text" value="{{data.targets}}" data-dtype="Number"/></td>
             <td><input name="data.special" type="text" value="{{data.special}}"/></td>
