--- a/templates/actor/tab/combat.html
+++ b/templates/actor/tab/combat.html
@@ -82,9 +82,9 @@
         </div>
         <div class="trainings-group">
             {{#if unlocked}}
-            <input class="checkbox" name="data.trainings.weapons.heavy" type="checkbox" {{checked data.trainings.weapons.heavy}}>
+                <input class="checkbox" name="data.trainings.weapons.heavy" type="checkbox" {{checked data.trainings.weapons.heavy}}>
             {{else}}
-            <i class="{{getCheckboxIcon  data.trainings.weapons.heavy}}"></i>
+                <i class="{{getCheckboxIcon  data.trainings.weapons.heavy}}"></i>
             {{/if}}
             <div class="trainings-name">{{localize "CLEENMAIN.weapon.category.heavy"}}</div>
         </div>
@@ -121,18 +121,12 @@
                 </tr>
             </thead>
             {{#each weapons as |item id|}}
-                <tr class="droppable" data-id="{{item._id}}">
+                <tr class="item droppable" data-item-id="{{_id}}">
                     <th>{{name}}</th>
                     <th>{{getCategoryLabel "weapon" item.data.category}}</th>
                     <th>{{item.data.skillName}}</th>
-                    <th>
-                        {{item.data.skillValue}}
-                        <a class="weapon-attack-roll" data-id="{{item._id}}"><i class="fas fa-dice"></i></a>
-                    </th>
-                    <th>
-                        {{item.data.damage}}
-                        <a class="weapon-damage-roll" data-id="{{item._id}}"><i class="fas fa-dice"></i></a>
-                    </th>
+                    <th>{{item.data.skillValue}}<a class="weapon-attack-roll"><i class="fas fa-dice"></i></a></th>
+                    <th>{{item.data.damage}}<a class="weapon-damage-roll"><i class="fas fa-dice"></i></a></th>
                     <th>{{item.data.range}}</th>
                     <th>{{item.data.zone}}</th>
                     <th>
@@ -144,12 +138,8 @@
                     </th>
                     <th>
                         {{#if ../unlocked}}
-                            <a class="item-open-sheet" data-type="weapon" data-id="{{item.id}}" title="{{localize 'CLEENMAIN.sheet.edit'}}">
-                                <i class="fas fa-pen"></i>
-                            </a>
-                            <a class="inline-delete" data-type="weapon" data-id="{{item.id}}" title="{{localize 'CLEENMAIN.sheet.delete'}}">
-                                <i class="fas fa-trash"></i>
-                            </a>
+                            <a class="item-open-sheet" data-type="weapon" title="{{localize 'CLEENMAIN.sheet.edit'}}"><i class="fas fa-pen"></i></a>
+                            <a class="inline-delete" data-type="weapon" title="{{localize 'CLEENMAIN.sheet.delete'}}"><i class="fas fa-trash"></i></a>
                         {{/if}}
                     </th>
                 </tr>
