Ajout primes et pénalités

--- a/templates/actor/tab/boons.html
+++ b/templates/actor/tab/boons.html
@@ -17,10 +17,10 @@
                         <div class="boon-name">{{item.name}}</div>
                         {{#if ../unlocked}}
                             <div class="icon-group">
-                                <a class="item-open-sheet" data-type="boon" data-id="{{item.id}}" title="{{localize "CLEENMAIN.sheet.edit"}}">
+                                <a class="item-open-sheet" data-type="boon" data-id="{{item.id}}" title="{{localize 'CLEENMAIN.sheet.edit'}}">
                                     <i class="fas fa-pen"></i>
                                 </a>
-                                <a class="inline-delete" data-type="boon" data-id="{{item.id}}" title="{{localize "CLEENMAIN.sheet.delete"}}">
+                                <a class="inline-delete" data-type="boon" data-id="{{item.id}}" title="{{localize 'CLEENMAIN.sheet.delete'}}">
                                     <i class="fas fa-trash"></i>
                                 </a>
                             </div>
