--- a/templates/chat/rolldialog.html
+++ b/templates/chat/rolldialog.html
@@ -21,24 +21,24 @@
     </div>
     <div class="bonus-block">
       <div class="bonus-line tooltip">
-        <label for="murderous">{{localize "CLEENMAIN.bonus.murderous.label"}}</label>
-        <input type="number" id="murderous" name="murderous" min="0" max="10" value="0"/>
-        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.murderous.description"}}</span>
+        <label for="lethalattack">{{localize "CLEENMAIN.bonus.lethalattack.label"}}</label>
+        <input type="number" id="lethalattack" name="lethalattack" min="0" max="10" value="0"/>
+        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.lethalattack.description"}}</span>
       </div>
       <div class="bonus-line tooltip">
-        <label for="manytargets">{{localize "CLEENMAIN.bonus.manytargets.label"}}</label>
-        <input type="number" id="manytargets" name="manytargets" min="0" max="1" value="0"/>
-        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.manytargets.description"}}</span>
+        <label for="mutlipleattacks">{{localize "CLEENMAIN.bonus.mutlipleattacks.label"}}</label>
+        <input type="number" id="mutlipleattacks" name="mutlipleattacks" min="0" max="1" value="0"/>
+        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.mutlipleattacks.description"}}</span>
       </div>
       <div class="bonus-line tooltip">
-        <label for="efficient">{{localize "CLEENMAIN.bonus.efficient.label"}}</label>
-        <input type="number" id="efficient" name="efficient" min="0" max="10" value="0"/>
-        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.efficient.description"}}</span>
+        <label for="efficiency">{{localize "CLEENMAIN.bonus.efficiency.label"}}</label>
+        <input type="number" id="efficiency" name="efficiency" min="0" max="10" value="0"/>
+        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.efficiency.description"}}</span>
       </div>
       <div class="bonus-line tooltip">
-        <label for="cover">{{localize "CLEENMAIN.bonus.cover.label"}}</label>
-        <input type="number" id="cover" name="cover" min="0" max="10" value="0"/>
-        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.cover.description"}}</span>
+        <label for="caution">{{localize "CLEENMAIN.bonus.caution.label"}}</label>
+        <input type="number" id="caution" name="caution" min="0" max="10" value="0"/>
+        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.caution.description"}}</span>
       </div>
       <div class="bonus-line tooltip">
         <label for="quick">{{localize "CLEENMAIN.bonus.quick.label"}}</label>
