--- a/templates/actor/tab/boons.html
+++ b/templates/actor/tab/boons.html
@@ -7,8 +7,9 @@
         </h1>
     {{/if}}
     <div class="boon-group">
+        {{log 'boon' this}}
         {{#each boons as |item id|}}
-            <div class="boon-card" data-item-id="{{item.id}}">
+            <div class="boon-card item" data-item-id="{{item._id}}">
                 <div class="boon-name-line">
                     {{#if ../isPlayer}}
                         {{#if item.data.developed}}
