Calcul des dommages selon les dés du jet d'attaque
- Dommage selon l'arme
- Bonus de l'héroïsme
- Prise en compte de la prime Attaque meurtrière
- Triple 1 pour succès
- Triple 6 pour échec

--- a/cleenmain.css
+++ b/cleenmain.css
@@ -693,7 +693,7 @@ input {
   padding-top: 1em;
 }
 .chatroll .modifierText {
-  margin: 1em 0 1em 0;
+  margin: 3px 0 2px 0;
   color: #cee956;
   text-align: center;
 }
