--- a/templates/actor/player.html
+++ b/templates/actor/player.html
@@ -92,7 +92,7 @@
                                     <input title="{{localize 'CLEENMAIN.heroism.max'}}" id="heroismmax" name="data.heroism.max" type="number" value="{{data.heroism.max}}" readonly/>
                                     <input class="checkbox" data-field="data.heroism.developed" name="data.heroism.developed" type="checkbox" {{checked data.heroism.developed}}>
                                 {{else}}
-                                    <div class="central-text">{{data.heroism.max}}</div><i class="{{getCheckboxIcon  data.heroism.max}}"></i>
+                                    <div class="central-text">{{data.heroism.max}}</div><i class="{{getCheckboxIcon  data.heroism.max}} central-text"></i>
                                 {{/if}}
                         </div>
                     </div>
