--- a/less/chat/rollResult.less
+++ b/less/chat/rollResult.less
@@ -24,7 +24,7 @@
         }
     }
     .modifierText{
-        margin: 1em 0 1em 0;
+        margin-bottom: 5px;
         color: @chat-modifiertext;
         text-align: center;
     }
