--- a/less/npc-sheet.less
+++ b/less/npc-sheet.less
@@ -56,6 +56,7 @@
                 .level-line{
                     display: flex;
                     flex-direction: row;
+                    justify-content: flex-end;
                     select{
                         margin: 0.5em 0.5em;
                         width:12em;
@@ -66,6 +67,7 @@
                     .weapon-line{
                         display: flex;
                         flex-direction: row;
+                        justify-content: flex-end;
                         margin: 0.5em 0.5em;
                         font-family: "Museo Slab";
                         font-size: 1rem;
