--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -5,9 +5,9 @@
             <div class="right-icon">
                 <a class="sheet-unlock" title="{{localize "CLEENMAIN.label.unlock_sheet"}}">
                     {{#if unlocked}}
-                    <i class="fas fa-lock-open"></i>
+                        <i class="fas fa-lock-open"></i>
                     {{else}}
-                    <i class="fas fa-lock"></i>
+                        <i class="fas fa-lock"></i>
                     {{/if}}
                 </a>
             </div>
@@ -17,9 +17,9 @@
                 <div class="level-line">
                     <select name="data.level">
                         {{#select data.level}}
-                        {{#each config.npccategory as |name type|}}
-                        <option value="{{type}}">{{localize name}}</option>
-                        {{/each}}
+                            {{#each config.npccategory as |name type|}}
+                                <option value="{{type}}">{{localize name}}</option>
+                            {{/each}}
                         {{/select}}
                     </select>
                     <div class="elite-block">
@@ -29,72 +29,75 @@
                 </div>
                 <div class="weapons">
                     {{#if unlocked}}
-                    <div class="weapon-line">
-                        <div class="line-label">{{localize "CLEENMAIN.weapon.add"}}</div>
-                        <a class="item-create" data-type="weapon" title="{{localize "CLEENMAIN.weapon.add"}}">
-                                <i class="fas fa-plus"></i>
-                        </a>
-                    </div>
+                        <div class="weapon-line">
+                            <div class="line-label">{{localize "CLEENMAIN.weapon.add"}}</div>
+                            <a class="item-create" data-type="weapon" title="{{localize "CLEENMAIN.weapon.add"}}">
+                                    <i class="fas fa-plus"></i>
+                            </a>
+                        </div>
                     {{/if}}
                     {{#each weapons as |item id|}}
-                    <div class="weapon-line">
-                        <div class="line-label">{{localize "CLEENMAIN.label.combat"}}</div>
-                        <div class="weapon-el">({{name}})</div>
-                        <div class="weapon-el">{{item.data.data.skillvaluenpc}} / {{item.data.data.skillvaluenpcelite}}</div>
-                        <a class="item-roll" data-type="weapon" data-id="{{item.id}}" data-rolltype="attack">
-                            <i class="fas fa-dice"></i>
-                        </a>
-                        <div class="weapon-el">( {{item.data.data.damage}} {{item.data.data.special}})</div>
-                        <div class="right-icon"></div>
-                        {{#if ../unlocked}}
-                        <a class="item-open-sheet" data-type="weapon" data-id="{{item.id}}" title="{{localize "CLEENMAIN.sheet.edit"}}">
-                            <i class="fas fa-pen"></i>
-                        </a>
-                        <a class="inline-delete" data-type="weapon" data-id="{{item.id}}" title="{{localize "CLEENMAIN.sheet.delete"}}">
-                            <i class="fas fa-trash"></i>
-                        </a>
-                        {{else}}
-                        <a class="item-roll" data-type="weapon" data-id="{{item.id}}" data-rolltype="damage">
-                            <i class="fas fa-dice"></i>
-                        </a>
-                        {{/if}}
-                    </div>
+                    {{log 'weapons' this}}
+                        <div class="weapon-line item" data-item-id="{{_id}}">
+                            <div class="line-label">{{localize "CLEENMAIN.label.combat"}}</div>
+                            <div class="weapon-el">({{name}})</div>
+                            <div class="weapon-el">{{item.data.skillValueNpc}} / {{item.data.skillValueNpcElite}}</div>
+                            <a class="weapon-attack-roll">
+                                <i class="fas fa-dice"></i>
+                            </a>
+                            <div class="weapon-el">( {{item.data.damageBase}} {{item.data.special}})</div>
+                            <div class="right-icon"></div>
+                            {{#if ../unlocked}}
+                                <a class="item-open-sheet" data-type="weapon" title="{{localize 'CLEENMAIN.sheet.edit'}}">
+                                    <i class="fas fa-pen"></i>
+                                </a>
+                                <a class="inline-delete" data-type="weapon" data-id="{{item.id}}" title="{{localize 'CLEENMAIN.sheet.delete'}}">
+                                    <i class="fas fa-trash"></i>
+                                </a>
+                            {{else}}
+                                <a class="item-roll" data-type="weapon" data-rolltype="damage">
+                                    <i class="fas fa-dice"></i>
+                                </a>
+                            {{/if}}
+                        </div>
                     {{/each}}
                     <div class="weapon-line">
                         <div class="line-label">{{localize "CLEENMAIN.skill.defence.name"}} : </div>
                         {{#if unlocked}}
-                        <input class="input-short" title="{{localize "CLEENMAIN.skill.defence.name"}}" id="defence" name="data.defence.skillValueNpc" type="number" value="{{data.defence.skillValueNpc}}"/>
-                        <div class="central-text">/</div>
-                        <input class="input-short" title="{{localize "CLEENMAIN.skill.defence.name"}}" id="defence" name="data.defence.skillValueNpcElite" type="number" value="{{data.defence.skillValueNpcElite}}"/>
-                        <div class="central-text">( </div>
-                        <input class="input-long" title="{{localize "CLEENMAIN.armor.add"}}" id="defence" name="data.defence.name" type="text" value="{{data.defence.name}}"/>
-                        <div class="central-text"> </div>
-                        <input class="input-short" title="{{localize "CLEENMAIN.armor.protection"}}" id="defence" name="data.defence.protection" type="number" value="{{data.defence.protection}}"/>
-                        <div class="central-text"> </div>
-                        <input class="input-long" title="{{localize "CLEENMAIN.armor.special"}}" id="defence" name="data.defence.special" type="text" value="{{data.defence.special}}"/>
-                        <div class="central-text"> )</div>
+                            <input class="input-short" title="{{localize 'CLEENMAIN.skill.defence.name'}}" id="defence" name="data.defence.skillValueNpc" type="number" value="{{data.defence.skillValueNpc}}"/>
+                            <div class="central-text">/</div>
+                            <input class="input-short" title="{{localize 'CLEENMAIN.skill.defence.name'}}" id="defence" name="data.defence.skillValueNpcElite" type="number" value="{{data.defence.skillValueNpcElite}}"/>
+                            <div class="central-text">( </div>
+                            <input class="input-long" title="{{localize 'CLEENMAIN.armor.add'}}" id="defence" name="data.defence.name" type="text" value="{{data.defence.name}}"/>
+                            <div class="central-text"> </div>
+                            <input class="input-short" title="{{localize 'CLEENMAIN.armor.protection'}}" id="defence" name="data.defence.protection" type="number" value="{{data.defence.protection}}"/>
+                            <div class="central-text"> </div>
+                            <input class="input-long" title="{{localize 'CLEENMAIN.armor.special'}}" id="defence" name="data.defence.special" type="text" value="{{data.defence.special}}"/>
+                            <div class="central-text"> )</div>
                         {{else}}
-                        <div class="central-text">{{data.defence.skillValueNpc}} / {{data.defence.skillValueNpcElite}} ( {{data.defence.name}}  {{data.defence.protection}} {{data.defence.special}} )</div>
-                        <a class="npcskill-roll" data-type="npcdefence" data-attribute="defence">
-                            <i class="fas fa-dice"></i>
-                        </a>
+                            <div class="central-text">{{data.defence.skillValueNpc}} / {{data.defence.skillValueNpcElite}} ( {{data.defence.name}}  {{data.defence.protection}} {{data.defence.special}} )</div>
+                            <a class="npcskill-roll" data-type="npcdefence" data-attribute="defence">
+                                <i class="fas fa-dice"></i>
+                            </a>
                         {{/if}}
                     </div>
                 </div>
                 <div class="npcskills-line">
-                    {{#each data.npcskills as |attribute key|}}
+                    {{log 'npcskills' this}}
+                    {{#each data.npcSkills as |attribute key|}}
+                    
                     <div class="npcskills-block">
                         <div class="npcskill-label">{{localize attribute.label}}:</div>
                         <div class="npcskill-value">
                             {{#if ../unlocked}}
-                            <input class="input-short" title="{{localize "CLEENMAIN.skill.defence.name"}}" id="defence" name="attribute.normal" type="number" value="{{attribute.normal}}"/>
-                            <div class="central-text">/</div>
-                            <input class="input-short" title="{{localize "CLEENMAIN.skill.defence.name"}}" id="defence" name="attribute.elite" type="number" value="{{attribute.elite}}"/>
+                                <input class="input-short" title="{{localize 'CLEENMAIN.skill.defence.name'}}" id="defence" name="attribute.normal" type="number" value="{{attribute.normal}}"/>
+                                <div class="central-text">/</div>
+                                <input class="input-short" title="{{localize 'CLEENMAIN.skill.defence.name'}}" id="defence" name="attribute.elite" type="number" value="{{attribute.elite}}"/>
                             {{else}}
-                            {{#if ../data.elite}} {{attribute.elite}} {{else}} {{attribute.normal}} {{/if}}
-                            <a class="npcskill-roll" data-type="npcskill" data-attribute="{{key}}">
-                                <i class="fas fa-dice"></i>
-                            </a>
+                                {{#if ../data.elite}} {{attribute.elite}} {{else}} {{attribute.normal}} {{/if}}
+                                <a class="npcskill-roll" data-type="npcskill" data-attribute="{{key}}">
+                                    <i class="fas fa-dice"></i>
+                                </a>
                             {{/if}}
                         </div>
                     </div>
@@ -104,7 +107,7 @@
                     {{#if ../unlocked}}
                     <div class="skill-line">
                         <div class="line-label">{{localize "CLEENMAIN.skill.add"}}</div>
-                        <a class="item-create" data-type="skill" title="{{localize "CLEENMAIN.skill.add"}}">
+                        <a class="item-create" data-type="skill" title="{{localize 'CLEENMAIN.skill.add'}}">
                             <i class="fas fa-plus"></i>
                         </a>
                     </div>
@@ -113,17 +116,17 @@
                         {{#each skills as |skill type|}}
                         <div class="skill-block">
                             {{#if ../unlocked}}
-                            <input class="inline-edit skill-name input-long" data-field="name" id="{{id}}" type="text" value="{{skill.name}}" data-dtype="Text" />
-                            <input class="inline-edit skill-value input-short" data-field="data.value" id="{{id}}" type="number" value="{{skill.data.data.value}}" data-dtype="Number" />
-                            <a class="inline-delete" data-type="skill" data-id="{{id}}" title="{{localize "CLEENMAIN.skill.delete"}}">
-                                <i class="fas fa-trash"></i>
-                            </a>
+                                <input class="inline-edit skill-name input-long" data-field="name" id="{{id}}" type="text" value="{{skill.name}}" data-dtype="Text" />
+                                <input class="inline-edit skill-value input-short" data-field="data.value" id="{{id}}" type="number" value="{{skill.data.data.value}}" data-dtype="Number" />
+                                <a class="inline-delete" data-type="skill" data-id="{{id}}" title="{{localize 'CLEENMAIN.skill.delete'}}">
+                                    <i class="fas fa-trash"></i>
+                                </a>
                             {{else}}
-                            <div class="skill-name" title="{{skill.data.data.description}}" >{{skill.name}} :</div>
-                            <div class="skill-value">{{skill.data.data.value}}</div>
-                            <a class="item-roll" data-type="skill" data-id="{{skill.id}}">
-                                <i class="fas fa-dice"></i>
-                            </a>
+                                <div class="skill-name" title="{{skill.data.data.description}}" >{{skill.name}} :</div>
+                                <div class="skill-value">{{skill.data.data.value}}</div>
+                                <a class="item-roll" data-type="skill" data-id="{{skill.id}}">
+                                    <i class="fas fa-dice"></i>
+                                </a>
                             {{/if}}
                         </div>
                         {{/each}}
@@ -131,7 +134,7 @@
                 </div>
                 <div class="npchealth-line">
                     <div class="central-text">{{localize "CLEENMAIN.label.health"}} : </div>
-                    <input class="input-short" title="{{localize "CLEENMAIN.health.current"}}" id="health" name="data.health.value" type="number" value="{{data.health.value}}"/>
+                    <input class="input-short" title="{{localize 'CLEENMAIN.health.current'}}" id="health" name="data.health.value" type="number" value="{{data.health.value}}"/>
                     <div class="central-text">/</div>
                     {{#if unlocked}}
                     <div class="health-block">
